--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "cookie": "^0.6.0",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
