--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 BACKEND_API_URL=http://localhost:3000
 LOG_INGEST_TOKEN=change-me
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_GROUP_ID=120363339314665620@g.us
